# NodeEditorCPP

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.a17ec0d  README.md  headless_main.cpp  main.cpp  test.hpp
res/: res.rc  (+6 more)
src/Clips/ArtnetClip/: CMakeLists.txt  artnetclipdelegate.hpp  artnetclipmodel.cpp  artnetclipmodel.hpp  artnetclipplugin.hpp
src/Clips/ImageClip/: CMakeLists.txt  imageclipdelegate.hpp  imageclipmodel.hpp  imageclipplugin.hpp
src/Clips/PlayerClip/: CMakeLists.txt  playerclipdelegate.hpp  playerclipmodel.hpp  playerclipplugin.hpp
src/Clips/TriggerClip/: CMakeLists.txt  OSCMessageItemWidget.cpp  OSCMessageItemWidget.hpp  OSCMessageListWidget.cpp  OSCMessageListWidget.hpp  triggerclipdelegate.hpp  triggerclipmodel.hpp  triggerclipplugin.hpp
src/Clips/VideoClip/: CMakeLists.txt  videoclipdelegate.hpp  videoclipmodel.hpp  videoclipplugin.hpp
src/Common/AppConfig/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConstantDefines.h
src/Common/BuildInNodes/: AbstractDelegateModel.cpp  AbstractDelegateModel.h  AudioInDataModel.cpp  AudioInDataModel.hpp  AudioOutDataModel.cpp  AudioOutDataModel.hpp  BoolSourceDataModel.hpp  BoolVariableDataModel.hpp  BuildInNodes.hpp  CMakeLists.txt  FloatSourceDataModel.hpp  FloatVariableDataModel.hpp  FromJsonDataModel.hpp  ImageInDataModel.cpp  ImageInDataModel.hpp  ImageOutDataModel.cpp  ImageOutDataModel.hpp  ImageShowModel.cpp  ImageShowModel.hpp  IntSourceDataModel.hpp  IntVariableDataModel.hpp  StringSourceDataModel.hpp  StringVariableDataModel.hpp  ToJsonDataModel.hpp  ToggleSourceDataModel.hpp  ToggleVariableDataModel.hpp  TriggerSourceDataModel.hpp  VariableInDataModel.cpp  VariableInDataModel.hpp  VariableOutDataModel.cpp  VariableOutDataModel.hpp  WindowDisplayModel.cpp  WindowDisplayModel.hpp
src/DataTypes/: AudioData.h  AudioData2.h  AudioTimestampRingQueue.cpp  AudioTimestampRingQueue.h  CMakeLists.txt  DecimalData.h  FileData.h  FloatData.h  ImageData.cpp  ImageData.h  ImageFormatData.h  NodeDataList.hpp  OSCMessage.h  PixmapData.h  PointData.h  PropertyData.h  RectData.h  RectsData.h  TextData.h  TimeCodeMessage.h  VariableData.cpp  VariableData.h  VariantData.h  backup
src/Nodes/: CMakeLists.txt  NodeDataList.hpp  NodeEditorStyle.hpp  NodeRegistry.cpp  NodeRegistry.h  NodeStyle.hpp
src/Nodes/ArtnetDeviceNode/: ArtnetDeviceDataModel.hpp  ArtnetDeviceInterface.hpp  CMakeLists.txt  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/ArtnetInNode/: ArtnetInDataModel.hpp  ArtnetInInterface.hpp  CMakeLists.txt  Doc.md  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/ArtnetOutNode/: ArtnetOutDataModel.hpp  ArtnetOutInterface.hpp  CMakeLists.txt  Doc.md  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/ArtnetPlaybackNode/: ArtnetPlaybackDataModel.cpp  ArtnetPlaybackDataModel.hpp  ArtnetPlaybackInterface.hpp  CMakeLists.txt  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/ArtnetUniverseNode/: ArtnetUniverseDataModel.hpp  ArtnetUniverseInterface.hpp  CMakeLists.txt  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/AudioASRNode/: AudioASRDataModel.hpp  AudioASRInterface.cpp  AudioASRInterface.h  AudioASRWorker.cpp  AudioASRWorker.hpp  CMakeLists.txt  Doc.md  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/AudioAnalysisNode/: AudioAnalysisDataModel.hpp  AudioAnalysisInterface.cpp  AudioAnalysisInterface.h  AudioAnalysisWorker.cpp  AudioAnalysisWorker.hpp  CMakeLists.txt  Doc.md  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/AudioCrossFaderNode/: AudioCrossFaderDataModel.hpp  AudioCrossFaderInterface.cpp  AudioCrossFaderInterface.h  AudioCrossFaderWorker.cpp  AudioCrossFaderWorker.hpp  CMakeLists.txt  Doc.md  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/AudioDecoderNode/: AudioDecoder.cpp  AudioDecoder.hpp  AudioDecoderDataModel.hpp  AudioDecoderInterface.hpp  CMakeLists.txt  Doc.md  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/AudioDeviceInNode/: AudioDeviceInDataModel.hpp  AudioDeviceInInterface.hpp  CMakeLists.txt  Doc.md  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/AudioDeviceOutNode/: AudioDeviceOutDataModel.cpp  AudioDeviceOutDataModel.hpp  AudioDeviceOutInterface.hpp  AudioOutputSelector.hpp  CMakeLists.txt  Doc.md  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/AudioDuckingNode/: AudioDuckingDataModel.hpp  AudioDuckingInterface.cpp  AudioDuckingInterface.h  AudioDuckingWorker.cpp  AudioDuckingWorker.hpp  CMakeLists.txt  Doc.md  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/AudioIntentNode/: AudioIntentDataModel.hpp  AudioIntentInterface.cpp  AudioIntentInterface.h  AudioIntentWorker.cpp  AudioIntentWorker.hpp  CMakeLists.txt  Doc.md  PluginDefinition.cpp  PluginDefinition.hpp  porcupine_bridge.c  porcupine_bridge.h  rhino_bridge.c  rhino_bridge.h
src/Nodes/AudioMatrixNode/: AudioMatrixDataModel.hpp  AudioMatrixInterface.cpp  AudioMatrixInterface.h  AudioMatrixWorker.cpp  AudioMatrixWorker.hpp  CMakeLists.txt  Doc.md  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/AudioPlayNode/: AudioPlayDataModel.hpp  AudioPlayInterface.hpp  CMakeLists.txt  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/AudioPriorityNode/: AudioPriorityDataModel.hpp  AudioPriorityInterface.cpp  AudioPriorityInterface.h  AudioPriorityWorker.cpp  AudioPriorityWorker.hpp  CMakeLists.txt  Doc.md  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/BoolSourceNode/: BoolSourceDataModel.hpp  CMakeLists.txt  PluginDefinition.cpp  PluginDefinition.hpp
src/Nodes/BuildInNodes/: AudioInDataModel.cpp  AudioInDataModel.hpp  AudioOutDataModel.hpp  BoolSourceDataModel.hpp  BoolVariableDataModel.hpp  CMakeLists.txt  FloatSourceDataModel.hpp  FloatVariableDataModel.hpp  FromJsonDataModel.hpp  ImageInDataModel.cpp  ImageInDataModel.hpp  ImageOutDataModel.cpp  ImageOutDataModel.hpp  ImageShowModel.cpp  ImageShowModel.hpp  IntSourceDataModel.hpp  IntVariableDataModel.hpp  StringSourceDataModel.hpp  StringVariableDataModel.hpp  ToJsonDataModel.hpp  ToggleSourceDataModel.hpp  ToggleVariableDataModel.hpp  TriggerSourceDataModel.hpp  (+4 more)
(+1143 files in other folders)
